...
    <string name="double_click_exit">Tap again to exit the program</string>
    <string name="import_book_per">Import local books requires storage permission</string>
    <string name="network_connection_unavailable">Network connection is not available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">OK</string>
    <string name="sure_del">Are you sure to delete it?</string>
    <string name="sure_del_any">Are you sure to delete %s?</string>
    <string name="sure_del_all_book">Are you sure to delete all books？</string>
    <string name="sure_del_download_book">Do you want to delete the downloaded book chapters at the same time?</string>
    <string name="qr_per">Scan QR code requires Camera permissions</string>
    <string name="aloud_can_not_auto_page">Speech is running, cannot turn pages automatically</string>
    <string name="input_charset">Input encoding</string>
...
